# django-onetimelink

./: .gitignore  LICENSE  MANIFEST.in  README.rst  __init__.py  setup.cfg  setup.py
onetimelink/: __init__.py  admin.py  api.py  apps.py  models.py  presettings.py  test.py  urls.py  views.py
onetimelink/migrations/: 0001_initial.py
onetimelink/static/css/: not_available.css  site.css
onetimelink/templates/: not_avallible.html  site.html  sitedownload_changelist.html
